--- a/docs/bib/mybib.bib
+++ b/docs/bib/mybib.bib
@@ -259,3 +259,21 @@ https://inf.mit.bme.hu/sites/default/files/materials/category/kateg%C3%B3ria/okt
 	howpublished = {\url{https://kubernetes.io/docs/tasks/run-application/horizontal-pod-autoscale/} (accessed at 26/03/2022)},
 	title        = {{H}orizontal {P}od {A}utoscaling},
 }
+
+@misc{KubernetesCRD,
+	author       = {{Kubernetes}},
+	howpublished = {\url{https://kubernetes.io/docs/concepts/extend-kubernetes/api-extension/custom-resources/} (accessed at 26/03/2022)},
+	title        = {{C}ustom {R}esources},
+}
+
+@misc{Helm,
+	author       = {{Helm}},
+	howpublished = {\url{https://helm.sh/} (accessed at 29/03/2022)},
+	title        = {{H}elm},
+}
+
+@misc{HelmWhatIs,
+	author       = {{Milica Dancuk}},
+	howpublished = {\url{https://phoenixnap.com/kb/what-is-helm} (accessed at 29/03/2022)},
+	title        = {{W}hat is {H}elm? {H}elm and {H}elm {C}harts {E}xplained},
+}
