--- a/docs/bib/mybib.bib
+++ b/docs/bib/mybib.bib
@@ -277,3 +277,9 @@ https://inf.mit.bme.hu/sites/default/files/materials/category/kateg%C3%B3ria/okt
 	howpublished = {\url{https://phoenixnap.com/kb/what-is-helm} (accessed at 29/03/2022)},
 	title        = {{W}hat is {H}elm? {H}elm and {H}elm {C}harts {E}xplained},
 }
+
+@misc{KubernetesResourceManagement,
+	author       = {{Kubernetes}},
+	howpublished = {\url{https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/} (accessed at 02/04/2022)},
+	title        = {{R}esource {M}anagement for {P}ods and {C}ontainers},
+}
