--- a/docs/content/background.tex
+++ b/docs/content/background.tex
@@ -350,7 +350,7 @@ In the background, cluster administrators can configure HPA to watch a specific 
 Custom Resource Definitions allow cluster administrators to define custom resources as a way to extend the Kubernetes API. Once a custom resources is installed, users can create and access its objects using \texttt{kubectl}, just as they do for built-in resources like Pods. On their own, custom resources enable storing and retrieving structured data. Combined with a custom controller, custom resources provide a true declarative API to implement or adapt arbitrary workflows and use cases in a Kubernetes native way \cite{KubernetesCRD}.
 
 %----------------------------------------------------------------------------
-\subsection{Helm}
+\subsection{Helm} \label{helm}
 %----------------------------------------------------------------------------
 
 Helm is a Kubernetes deployment tool for automating creation, packaging, configuration, and deployment of applications and services to Kubernetes clusters \cite{HelmWhatIs}.
@@ -362,7 +362,7 @@ Helm works with the concept of Charts which are packages containing all the reso
 %----------------------------------------------------------------------------
 
 %----------------------------------------------------------------------------
-\subsection{CloudFormation}
+\subsection{CloudFormation} \label{cloudformation}
 %----------------------------------------------------------------------------
 
 %----------------------------------------------------------------------------
