--- a/docs/content/future-work.tex
+++ b/docs/content/future-work.tex
@@ -1,3 +1,7 @@
 %----------------------------------------------------------------------------
 \chapter{Future Work}
 %----------------------------------------------------------------------------
+
+\begin{itemize}
+	\item database in HA mode (currently single instance)
+\end{itemize}
