--- a/docs/content/future-work.tex
+++ b/docs/content/future-work.tex
@@ -4,4 +4,8 @@
 
 \begin{itemize}
 	\item database in HA mode (currently single instance)
+	\item fine-tune chaos experiments
+	\begin{itemize}
+		\item stresschaos has practically no effect
+	\end{itemize}
 \end{itemize}
