--- a/docs/bib/mybib.bib
+++ b/docs/bib/mybib.bib
@@ -283,3 +283,9 @@ https://inf.mit.bme.hu/sites/default/files/materials/category/kateg%C3%B3ria/okt
 	howpublished = {\url{https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/} (accessed at 02/04/2022)},
 	title        = {{R}esource {M}anagement for {P}ods and {C}ontainers},
 }
+
+@misc{KubernetesNodePressureEviction,
+	author       = {{Kubernetes}},
+	howpublished = {\url{https://kubernetes.io/docs/concepts/scheduling-eviction/node-pressure-eviction/} (accessed at 02/04/2022)},
+	title        = {{N}ode-pressure {E}viction},
+}
