--- a/docs/content/future-work.tex
+++ b/docs/content/future-work.tex
@@ -1,5 +1,5 @@
 %----------------------------------------------------------------------------
-\chapter{Future Work}
+\chapter{Future Work} \label{future-work}
 %----------------------------------------------------------------------------
 
 \begin{itemize}
